src/test/ui/resolve/issue-17518.stderr
error[E0422]: unresolved struct, variant or union type `E`
  --> $DIR/issue-17518.rs:16:5
   |
16 |     E { name: "foobar" }; //~ ERROR unresolved struct, variant or union type `E`
   |     ^ no resolution found
   |
   = help: possible candidate is found in another module, you can import it into scope:
   = help:   `use SomeEnum::E;`

error: aborting due to previous error

